--- a/img/style.css
+++ b/img/style.css
@@ -215,65 +215,65 @@ a {
 .bj01{
 	height:490px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bjindex1.jpg) no-repeat center top;
+	background:url(bjindex1.jpg) no-repeat center top;
 	margin:0 auto;
 }
 .bj02{
 	height:506px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_02.jpg) no-repeat center top;
+	background:url(bj_02.jpg) no-repeat center top;
 }
 .bj03{
 	height:719px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_03.jpg) no-repeat center top;
+	background:url(bj_03.jpg) no-repeat center top;
 }
 .bj04 {
 	height:312px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_04.jpg) no-repeat center top;
+	background:url(bj_04.jpg) no-repeat center top;
 }
 .bj05 {
 	height:744px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_05.jpg) no-repeat center top;
+	background:url(bj_05.jpg) no-repeat center top;
 }
 .bj06 {
 	height:841px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_06.jpg) no-repeat center top;
+	background:url(bj_06.jpg) no-repeat center top;
 }
 .bj07 {
 	height:829px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_07.jpg) no-repeat center top;
+	background:url(bj_07.jpg) no-repeat center top;
 }
 .bj08 {
 	height:859px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_08.jpg) no-repeat center top;
+	background:url(bj_08.jpg) no-repeat center top;
 }
 .bj09 {
 	height:853px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_09.jpg) no-repeat center top;
+	background:url(bj_09.jpg) no-repeat center top;
 }
 .bj10 {
 	height:117px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_10.jpg) no-repeat center top;
+	background:url(bj_10.jpg) no-repeat center top;
 }
 .bj11 {
 	height:2396px;
 	min-width:1336px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bj_11.jpg) no-repeat center top;
+	background:url(bj_11.jpg) no-repeat center top;
 }
 #banner {
 	/**width:100%;**/
 	height:400px;
 	min-width:1336px;
 	margin-bottom:20px;
-	background:url(http://oaapf37iy.bkt.clouddn.com/bnbjblur.jpg) no-repeat top center #999;
+	background:url(bnbjblur.jpg) no-repeat top center #999;
 }
 .maodian {
 	width:80px;
